--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-compare-slider": "^3.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
