--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
-/public/vide.mp4
+/public/video.mp4
+
 # env files (can opt-in for committing if needed)
 .env*
 
