ignorando algunos archivos

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 /public/video.mp4
+public/video.mp4
+./public/video.mp4
+/public/video.mp4
 
 # env files (can opt-in for committing if needed)
 .env*
@@ -42,3 +45,6 @@ yarn-error.log*
 next-env.d.ts
 
 .vercel
+
+package-lock.json
+mejorarSEO.txt
