--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^19.0.0",
     "react-compare-slider": "^3.1.0",
     "react-countup": "^6.5.3",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
